add: replace images with interactive genially

--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
       name="viewport"
       content="width=device-width, initial-scale=1, user-scalable=no"
     />
-    <link rel="shortcut icon" href="./images/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./images/logo.png" type="image/x-icon" />
     <link rel="stylesheet" href="assets/css/main.css" />
-    <noscript><link rel="stylesheet" href="assets/css/noscript.css"/></noscript>
+    <noscript
+      ><link rel="stylesheet" href="assets/css/noscript.css"
+    /></noscript>
   </head>
   <body class="is-preload">
     <!-- Wrapper -->
@@ -17,14 +19,12 @@
       <!-- Header -->
       <header id="header">
         <div class="logo">
-          <img src="./images/logo.png" alt="Logo Code Thinkers">
+          <img src="./images/logo.png" alt="Logo Code Thinkers" />
         </div>
         <div class="content">
           <div class="inner">
             <h1>Code Thinkers</h1>
-            <p>
-              Bitácora del Trabajo Final Integrador 
-            </p>
+            <p>Bitácora del Trabajo Final Integrador</p>
           </div>
         </div>
         <nav>
@@ -34,6 +34,8 @@
             <li><a href="#protopersona">Protopersona</a></li>
             <li><a href="#desafio">Desafío</a></li>
             <li><a href="#journey-map">Journey Map</a></li>
+            <li><a href="#brainstorming">Brainstorming</a></li>
+            <li><a href="#prototipo">Prototipo</a></li>
           </ul>
         </nav>
       </header>
@@ -43,61 +45,167 @@
         <!-- Mapa de actores -->
         <article id="mapa-actores">
           <h2 class="major">Mapa de actores</h2>
-          <span class="image main"><img src="./images/mapa-actores-vertical.png" alt="Mapa de actores" /></span>
+          <div style="width: 100%">
+            <div
+              style="
+                position: relative;
+                padding-bottom: 114.08%;
+                padding-top: 0;
+                height: 0;
+              "
+            >
+              <iframe
+                frameborder="0"
+                width="1200"
+                height="1369"
+                style="
+                  position: absolute;
+                  top: 0;
+                  left: 0;
+                  width: 100%;
+                  height: 100%;
+                "
+                src="https://view.genial.ly/60e872d07849f80d9f4bcec2"
+                type="text/html"
+                allowscriptaccess="always"
+                allowfullscreen="true"
+                scrolling="yes"
+                allownetworking="all"
+              ></iframe>
+            </div>
+          </div>
           <p>
-            Basandonos en las entrevistas diseñamos un mapa de actores. Este mapa nos permite mostrar cada uno de los participantes que intervienen
-            con los trabajadores en modalidad virtual durante su jornada laboral
+            Basandonos en las entrevistas diseñamos un mapa de actores. Este
+            mapa nos permite mostrar cada uno de los participantes que
+            intervienen con los trabajadores en modalidad virtual durante su
+            jornada laboral.
           </p>
         </article>
 
         <!-- Mapa de empatia -->
         <article id="mapa-empatia">
           <h2 class="major">Mapa de empatía</h2>
-          <span class="image main"><img src="./images/mapa-empatia-vertical.png" alt="Mapa de empatía" /></span>
+          <div style="width: 100%">
+            <div
+              style="
+                position: relative;
+                padding-bottom: 141.33%;
+                padding-top: 0;
+                height: 0;
+              "
+            >
+              <iframe
+                frameborder="0"
+                width="1200"
+                height="1696"
+                style="
+                  position: absolute;
+                  top: 0;
+                  left: 0;
+                  width: 100%;
+                  height: 100%;
+                "
+                src="https://view.genial.ly/60e87b675fc6cf0d8c8ec97f"
+                type="text/html"
+                allowscriptaccess="always"
+                allowfullscreen="true"
+                scrolling="yes"
+                allownetworking="all"
+              ></iframe>
+            </div>
+          </div>
           <p>
-            En esta instancia nos basamos nuevamente en las entrevistas para intentar "ponernos en sus zapatos" 
-            y diseñar el mapa de empatía. Para plantearlo y conocer un poco más al usuario, fuimos 
-            respondiendo a las preguntas:
-            <ul>
-              <li>¿Qué piensa?</li>
-              <li>¿Qué siente?</li>
-              <li>¿Qué hace?</li>
-              <li>¿Qué dice?</li>
-              <li>¿Cuáles son sus miedos, frustraciones y obstáculos?</li>
-              <li>¿Qué es lo que desean, necesitan, esperan y sueñan?</li>
-            </ul>
+            En esta instancia nos basamos nuevamente en las entrevistas para
+            intentar "ponernos en sus zapatos" y diseñar el mapa de empatía.
+            Para plantearlo y conocer un poco más al usuario, fuimos
+            respondiendo a las preguntas que se ven en la imagen.
           </p>
         </article>
 
         <!-- Protopersona -->
         <article id="protopersona">
           <h2 class="major">Protopersona</h2>
-          <span class="image main"><img src="./images/persona-juan.png" alt="Protopersona" /></span>
+          <div style="width: 100%">
+            <div
+              style="
+                position: relative;
+                padding-bottom: 138.58%;
+                padding-top: 0;
+                height: 0;
+              "
+            >
+              <iframe
+                frameborder="0"
+                width="1200"
+                height="1663"
+                style="
+                  position: absolute;
+                  top: 0;
+                  left: 0;
+                  width: 100%;
+                  height: 100%;
+                "
+                src="https://view.genial.ly/60e87d368538ce0da6769bc4"
+                type="text/html"
+                allowscriptaccess="always"
+                allowfullscreen="true"
+                scrolling="yes"
+                allownetworking="all"
+              ></iframe>
+            </div>
+          </div>
           <p>
-            Para profundizar la etapa de empatizar con el usuario creamos a Juan, nuestra Protopersona.
+            Para profundizar la etapa de empatizar con el usuario creamos a
+            Juan, nuestra Protopersona.
           </p>
         </article>
 
         <!-- Desafio -->
         <article id="desafio">
           <h2 class="major">Desafío</h2>
-          <span class="image main"><img src="./images/desafio-vertical.png" alt="" /></span>
+          <span class="image main"
+            ><img src="./images/desafio-vertical.png" alt=""
+          /></span>
           <p>
-            Una vez terminada la etapa de empatizar, definimos el desafío que vamos a resolver.
+            Una vez terminada la etapa de empatizar, definimos el desafío que
+            vamos a resolver.
           </p>
         </article>
 
         <!-- Journey Map -->
         <article id="journey-map">
           <h2 class="major">Journey Map</h2>
-          <span class="image main"><img src="./images/journey-map-juan.png" alt="" /></span>
+          <span class="image main"
+            ><img src="./images/journey-map-juan.png" alt=""
+          /></span>
           <p>
-            Para definir el desafío nos sirvió plantear un Customer Journey Map. Con él pudimos
-            entender cómo las personas vivencian su jornada laboral y logramos identificar los mayores
-            puntos de dolor.
+            Para definir el desafío nos sirvió plantear un Customer Journey Map.
+            Con él pudimos entender cómo las personas vivencian su jornada
+            laboral y logramos identificar los mayores puntos de dolor.
           </p>
         </article>
- 
+
+        <!-- Brainstorming -->
+        <article id="brainstorming">
+          <h2 class="major">Brainstorming</h2>
+          <span class="image main"
+            ><img src="./images/brainstorming.png" alt=""
+          /></span>
+          <p>
+            Luego de definir el desafío a resolver hicimos un brainstorming para
+            intentar encontrar la mejor solución al problema de nuestros
+            usuarios.
+          </p>
+        </article>
+
+        <!-- Prototipo -->
+        <article id="prototipo">
+          <h2 class="major">Prototipo</h2>
+          <span class="image main"
+            ><img src="./images/prototipo.png" alt=""
+          /></span>
+          <p></p>
+        </article>
       </div>
 
       <!-- Footer -->
