add brainstorming img

--- a/index.html
+++ b/index.html
@@ -163,9 +163,9 @@
         <!-- Desafio -->
         <article id="desafio">
           <h2 class="major">Desafío</h2>
-          <span class="image main"
-            ><img src="./images/desafio-vertical.png" alt=""
-          /></span>
+          <span class="image main">
+            <img src="./images/desafio-vertical.png" alt=""/>
+          </span>
           <p>
             Una vez terminada la etapa de empatizar, definimos el desafío que
             vamos a resolver.
@@ -175,9 +175,9 @@
         <!-- Journey Map -->
         <article id="journey-map">
           <h2 class="major">Journey Map</h2>
-          <span class="image main"
-            ><img src="./images/journey-map-juan.png" alt=""
-          /></span>
+          <span class="image main">
+            <img src="./images/journey-map-juan.png" alt=""/>
+          </span>
           <p>
             Para definir el desafío nos sirvió plantear un Customer Journey Map.
             Con él pudimos entender cómo las personas vivencian su jornada
@@ -188,9 +188,9 @@
         <!-- Brainstorming -->
         <article id="brainstorming">
           <h2 class="major">Brainstorming</h2>
-          <span class="image main"
-            ><img src="./images/brainstorming.png" alt=""
-          /></span>
+          <span class="image main">
+            <img src="./images/brainstorming.png" alt=""/>
+          </span>
           <p>
             Luego de definir el desafío a resolver hicimos un brainstorming para
             intentar encontrar la mejor solución al problema de nuestros
@@ -201,9 +201,9 @@
         <!-- Prototipo -->
         <article id="prototipo">
           <h2 class="major">Prototipo</h2>
-          <span class="image main"
-            ><img src="./images/prototipo.png" alt=""
-          /></span>
+          <span class="image main">
+            <img src="./images/prototipo.png" alt=""/>
+          </span>
           <p></p>
         </article>
       </div>
