--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="content">
           <div class="inner">
             <h1>Code Thinkers</h1>
-            <p>Bitácora del Trabajo Final Integrador</p>
+            <p>Trabajo Final Integrador</p>
           </div>
         </div>
         <nav>
@@ -35,7 +35,8 @@
             <li><a href="#desafio">Desafío</a></li>
             <li><a href="#journey-map">Journey Map</a></li>
             <li><a href="#brainstorming">Brainstorming</a></li>
-            <li><a href="#prototipo">Prototipo</a></li>
+            <li><a href="#viabilidad-impacto">Viabilidad e Impacto</a></li>
+            <!-- <li><a href="#prototipo">Prototipo</a></li> -->
           </ul>
         </nav>
       </header>
@@ -198,14 +199,27 @@
           </p>
         </article>
 
+        <!-- Matriz de viabilidad e impacto -->
+        <article id="viabilidad-impacto">
+          <h2 class="major">Matriz de viabilidad e impacto</h2>
+          <span class="image main">
+            <img src="./images/matriz-viabilidad-impacto.png" alt=""/>
+          </span>
+          <p>
+            Seleccionamos algunas ideas del brainstorming y las ubicamos en la matriz
+            de viabilidad e impacto. De esta manera podemos visualizar qué ideas conviene
+            descartar, cuáles dejar para más adelante y cuáles considerar para este momento.
+          </p>
+        </article>
+
         <!-- Prototipo -->
-        <article id="prototipo">
+        <!-- <article id="prototipo">
           <h2 class="major">Prototipo</h2>
           <span class="image main">
-            <img src="./images/prototipo.png" alt=""/>
+            <img src="./assets/images/prototipo.png" alt=""/>
           </span>
           <p></p>
-        </article>
+        </article> -->
       </div>
 
       <!-- Footer -->
