add: value proposal

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <li><a href="#journey-map">Journey Map</a></li>
             <li><a href="#brainstorming">Brainstorming</a></li>
             <li><a href="#viabilidad-impacto">Viabilidad e Impacto</a></li>
-            <!-- <li><a href="#prototipo">Prototipo</a></li> -->
+            <li><a href="#propuesta-de-valor">Propuesta de valor</a></li>
           </ul>
         </nav>
       </header>
@@ -165,7 +165,7 @@
         <article id="desafio">
           <h2 class="major">Desafío</h2>
           <span class="image main">
-            <img src="./images/desafio-vertical.png" alt=""/>
+            <img src="./images/desafio-vertical.png" alt="" />
           </span>
           <p>
             Una vez terminada la etapa de empatizar, definimos el desafío que
@@ -177,7 +177,7 @@
         <article id="journey-map">
           <h2 class="major">Journey Map</h2>
           <span class="image main">
-            <img src="./images/journey-map-juan.png" alt=""/>
+            <img src="./images/journey-map-juan.png" alt="" />
           </span>
           <p>
             Para definir el desafío nos sirvió plantear un Customer Journey Map.
@@ -190,7 +190,7 @@
         <article id="brainstorming">
           <h2 class="major">Brainstorming</h2>
           <span class="image main">
-            <img src="./images/brainstorming.png" alt=""/>
+            <img src="./images/brainstorming.png" alt="" />
           </span>
           <p>
             Luego de definir el desafío a resolver hicimos un brainstorming para
@@ -203,23 +203,54 @@
         <article id="viabilidad-impacto">
           <h2 class="major">Matriz de viabilidad e impacto</h2>
           <span class="image main">
-            <img src="./images/matriz-viabilidad-impacto.png" alt=""/>
+            <img src="./images/matriz-viabilidad-impacto.png" alt="" />
           </span>
           <p>
-            Seleccionamos algunas ideas del brainstorming y las ubicamos en la matriz
-            de viabilidad e impacto. De esta manera podemos visualizar qué ideas conviene
-            descartar, cuáles dejar para más adelante y cuáles considerar para este momento.
+            Seleccionamos algunas ideas del brainstorming y las ubicamos en la
+            matriz de viabilidad e impacto. De esta manera podemos visualizar
+            qué ideas conviene descartar, cuáles dejar para más adelante y
+            cuáles considerar para este momento.
           </p>
         </article>
 
-        <!-- Prototipo -->
-        <!-- <article id="prototipo">
-          <h2 class="major">Prototipo</h2>
-          <span class="image main">
-            <img src="./assets/images/prototipo.png" alt=""/>
-          </span>
-          <p></p>
-        </article> -->
+        <!-- Propuesta de valor -->
+        <article id="propuesta-de-valor">
+          <h2 class="major">Propuesta de valor</h2>
+          <div style="width: 100%">
+            <div
+              style="
+                position: relative;
+                padding-bottom: 56.17%;
+                padding-top: 0;
+                height: 0;
+              "
+            >
+              <iframe
+                frameborder="0"
+                width="1200"
+                height="674"
+                style="
+                  position: absolute;
+                  top: 0;
+                  left: 0;
+                  width: 100%;
+                  height: 100%;
+                "
+                src="https://view.genial.ly/60f305bb8839f20d8cdb314d"
+                type="text/html"
+                allowscriptaccess="always"
+                allowfullscreen="true"
+                scrolling="yes"
+                allownetworking="all"
+              ></iframe>
+            </div>
+          </div>
+          <p>
+            Con la propuesta de valor logramos verificar si las necesidades de
+            nuestros usuarios estaban alineadas con la idea seleccionada del
+            brainstorming.
+          </p>
+        </article>
       </div>
 
       <!-- Footer -->
