--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             <li><a href="#brainstorming">Brainstorming</a></li>
             <li><a href="#viabilidad-impacto">Viabilidad e Impacto</a></li>
             <li><a href="#propuesta-de-valor">Propuesta de valor</a></li>
+            <li><a href="#prototipo">Prototipo</a></li>
           </ul>
         </nav>
       </header>
@@ -249,6 +250,38 @@
             Con la propuesta de valor logramos verificar si las necesidades de
             nuestros usuarios estaban alineadas con la idea seleccionada del
             brainstorming.
+          </p>
+        </article>
+
+        <!-- Prototipo -->
+        <article id="prototipo">
+          <h2 class="major">Prototipo</h2>
+          <div style="width: 100%">
+            <div
+              style="
+                position: relative;
+                padding-bottom: 56.17%;
+                padding-top: 0;
+                height: 0;
+              "
+            >
+            <iframe 
+                frameborder="0"
+                style="
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    width: 100%;
+                    height: 100%;"
+                src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FQUkavn3nV5MxXT1687zStW%2FCTD-DT-Code-Thinkers%3Fnode-id%3D2%253A2%26scaling%3Dscale-down-width"  
+                allowfullscreen>
+              </iframe>
+            </div>
+          </div>
+          <p>
+            Presentando a nuestros usuarios este prototipo, que sería una primera aproximación del
+            producto final, podemos obtener feedback rápidamente. De esta manera tenemos la posibilidad
+            de evaluar si estamos bien encaminados o si es momento de virar el timón y cambiar el rumbo.
           </p>
         </article>
       </div>
