--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       </header>
 
       <!-- Main -->
-      <div id="main">
+      <main id="main">
         <!-- Mapa de actores -->
         <article id="mapa-actores">
           <h2 class="major">Mapa de actores</h2>
@@ -284,7 +284,7 @@
             de evaluar si estamos bien encaminados o si es momento de virar el timón y cambiar el rumbo.
           </p>
         </article>
-      </div>
+      </main>
 
       <!-- Footer -->
       <footer id="footer">
